--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "plain-object-serializer-ts",
-  "version": "0.1.3",
+  "version": "1.0.0",
   "description": "It helps to make class instance to plain object.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -70,7 +70,7 @@
     },
     "globals": {
       "ts-jest": {
-        "tsConfig": "tsconfig.json"
+        "tsconfig": "tsconfig.json"
       }
     },
     "testMatch": [
